# OpenPlugin

./: README.md
Client/: openplugin_client.py
Server/: .gitignore  CMakeLists.txt  ico.rc  widget.cpp  widget.h  widget.ui
Server/config/: config.ini
